[project]
name = "miavisc"
description = "Miavisc is a video → slide converter"
version = "2.0.0"
requires-python = ">= 3.12"
readme = "README.md"

dependencies = [
    "av>=14.4.0",
    "imagehash>=4.3.2",
    "imageio>=2.37.0",
    "img2pdf>=0.6.1",
    "opencv-contrib-python>=4.11.0.86",
    "pillow>=11.2.1",
]

keywords = ["slide", "lecture", "converter", "extract", "video"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3"
]

[project.urls]
Repository = "https://github.com/pannxe/miavisc.git"
Issues = "https://github.com/pannxe/miavisc/issues"
GitHub = "https://github.com/pannxe/miavisc"

[project.scripts]
miavisc = "miavisc_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
include = ["pyproject.toml", "*.py"]
exclude = ["*.bak"]
line-length = 85
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"] 
ignore = [ "D", "PLC0414", "T201" , "COM812", "ANN003", "ANN401", "PLR0913", "PLR2004"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "lf"
docstring-code-format = true